# mutagen

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml  security_audit.yml
docs/: architecture.md  beyond-02.md  customization.md  design-decisions.md  how-to-implement-a-mutator.md  mutations.md  mutators.md  test-structure.md  vision.md
docs/mutators/: binop_add.md  binop_bool.md  binop_cmp.md  binop_eq.md  lit_bool.md  lit_int.md  readme.md  stmt_call.md  unop_not.md
examples/example_project/: Cargo.toml
examples/example_project/src/: lib.rs
examples/feature-gated/: Cargo.toml
examples/feature-gated/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: add1.rs  bubblesort.rs  ggt.rs  lazy_add.rs  lib.rs  not_covered.rs  primetest.rs  simple_add.rs
examples/with-integration-tests/: Cargo.toml
examples/with-integration-tests-v1/: Cargo.toml
examples/with-integration-tests-v1/src/: lib.rs
examples/with-integration-tests-v1/tests/: test_fib.rs
examples/with-integration-tests-v2/: Cargo.toml
examples/with-integration-tests-v2/src/: lib.rs
examples/with-integration-tests-v2/tests/: test_fib.rs
examples/with-integration-tests/src/: lib.rs
examples/with-integration-tests/tests/: test_fib.rs
mutagen/: Cargo.toml
mutagen-core/: Cargo.toml
mutagen-core/src/: comm.rs  lib.rs  mutagen_file.rs  mutate_args.rs  mutation.rs  mutator.rs  optimistic.rs  runtime_config.rs  transform_info.rs  transformer.rs
mutagen-core/src/comm/: coverage.rs  mutagen_files.rs  mutation.rs  report.rs
mutagen-core/src/mutate_args/: arg_ast.rs
mutagen-core/src/mutator/: mutator_binop_add.rs  mutator_binop_bit.rs  mutator_binop_bool.rs  mutator_binop_cmp.rs  mutator_binop_eq.rs  mutator_binop_num.rs  mutator_lit_bool.rs  mutator_lit_int.rs  mutator_lit_str.rs  mutator_stmt_call.rs  mutator_unop_not.rs
mutagen-core/src/optimistic/: not_to_none.rs
mutagen-core/src/transformer/: arg_ast.rs  ast_inspect.rs  mutate_args.rs  set_true_span.rs  transform_context.rs  transform_info.rs  transformer_binop_add.rs  transformer_binop_eq.rs  transformer_lit_bool.rs  transformer_lit_int.rs  transformer_unop_not.rs
mutagen-runner/: Cargo.toml
mutagen-runner/src/: lib.rs  main.rs  mutant_status.rs  progress.rs  progress_bar.rs  test_bin.rs
mutagen-selftest/: Cargo.toml
mutagen-selftest/src/: lib.rs  mutator.rs  runtime_config.rs  test_not_mutated.rs
mutagen-selftest/src/mutator/: test_binop_add.rs  test_binop_bit.rs  test_binop_bool.rs  test_binop_cmp.rs  test_binop_eq.rs  test_binop_num.rs  test_lit_bool.rs  test_lit_int.rs  test_lit_str.rs  test_stmt_call.rs  test_unop_not.rs
mutagen-transform/: Cargo.toml
mutagen-transform/src/: args.rs  lib.rs  transform_info.rs  transformer.rs
mutagen-transform/src/args/: arg_options.rs
mutagen-transform/src/transformer/: transformer_binop_add.rs  transformer_binop_eq.rs  transformer_lit_bool.rs  transformer_lit_int.rs  transformer_unop_not.rs
mutagen/src/: lib.rs  mutator.rs  optimistic.rs  runtime_config.rs
mutagen/src/mutator/: mutator_binop_add.rs  mutator_lit_bool.rs  mutator_lit_int.rs  mutator_unop_not.rs
mutagen/src/optimistic/: add_to_sub.rs  not_to_none.rs
plugin/: Cargo.toml  build.rs
plugin/src/: bounded_loop.rs  lib.rs  lib_old.rs  mutation.rs  pattern.rs  ty.rs
plugin/tests/: binops.rs  compile-test.rs  integration.rs
plugin/tests/common/: mod.rs
plugin/tests/compile-fail/: failing_eq_ne.rs  impl-method.rs  issue-34.rs  many-mutations-same-scope.rs  may-clone-reserved.rs  oportunistic-issues.rs  patterns.rs
plugin/tests/mutagen/: addsub.mut  addsub.rs  binops.mut  binops.rs  interchange.mut  interchange.rs  update-all-references.sh  update-references.sh
plugin/tests/run-pass/: 128-bit-types.rs  clones.rs  failing_eq_ne.rs  for_loops.rs  impl-method.rs  issue-127.rs  issue-34.rs  issue-77.rs  loops.rs  many-mutations-same-scope.rs  oportunistic-issues.rs  patterns.rs  test_eq_ne.rs  while_let.rs
runner/: Cargo.toml
runner/src/: main.rs  runner.rs
src/: bounded_loop.rs  coverage.rs  iterators.rs  lib.rs
