[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools::testing"]
description = "Mutation testing for Rust"
edition = "2018"
keywords = ["testing"]
license = "Apache-2.0/MIT"
name = "mutagen"
readme = "README.md"
repository = "https://github.com/llogiq/mutagen"
version = "0.1.2"

[dependencies]
lazy_static = "1.0"

[badges]
travis-ci = { repository = "llogiq/mutagen", branch = "master" }
