[package]
name = "mutagen-core"
version = "0.2.0"
authors = ["Samuel Pilz <samuel.pilz@posteo.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
json = "0.11"
lazy_static = "1.3.0"

quote = "1.0.2"
proc-macro2 = { version = "1.0.1", features = ["span-locations"] }
syn = { version = "1.0.3", features = ["full", "extra-traits", "fold"] }


[features]
# this is a flag that is required for integration tests to allow setting the environment configuration from tests.
# This is not intended to be used for users of `mutagen`.
self_test = []

[lib]
doctest = false
