[package]
name = "mutagen-core"
version = "0.2.0"
authors = ["Andre Bogus <bogusandre@gmail.com>", "Samuel Pilz <samuel.pilz@posteo.net>"]
edition = "2018"
license = "Apache-2.0/MIT"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.57"
json = "0.12.4"
lazy_static = "1.4.0"

quote = "1.0.9"
proc-macro2 = { version = "1.0.29", features = ["span-locations"] }
syn = { version = "2.0.15", features = ["full", "extra-traits", "fold"] }


[features]
# this is a flag that is required for integration tests to allow setting the environment configuration from tests.
# This is not intended to be used for users of `mutagen`.
self_test = []

[lib]
doctest = false
