[package]
name = "cargo-mutagen"
version = "0.2.1"
authors = ["Andre Bogus <bogusandre@gmail.com>", "Samuel Pilz <samuel.pilz@posteo.net>"]
edition = "2018"
license = "Apache-2.0/MIT"

[dependencies]
json = "0.12"
failure = "0.1"
wait-timeout = "0.2.0"
serde_json = "1.0"
mutagen-core = { path = "../mutagen-core"}
console = "0.13.0"
humantime = "2.0.0"
structopt = "0.3"

[badges]
travis-ci = { repository = "llogiq/mutagen", branch = "master" }

[lib]
doctest = false
