[package]
name = "mutagen-transform"
version = "0.2.0"
authors = ["power-fungus <samuel.pilz@posteo.net>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"

# the versions of the following crates are fixed because in the past even minor changes lead to failing code.
# the `syn` dependency is particularly brittle because helper code for default folds is copied from the source code repository
# The intention is to update the dependencies manually if they have been updated.
quote = "=0.6.13"
proc-macro2 = { version = "=0.4.30", features = ["span-locations"] }
syn = { version = "=0.15.39", features = ["full", "extra-traits", "fold"] }
mutagen-core = { path = "../mutagen-core" }
serde_json = "1.0"
failure = "0.1"

[lib]
proc_macro = true
