[package]
name = "mutagen-transform"
version = "0.2.0"
authors = ["power-fungus <samuel.pilz@posteo.net>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
serde_json = "1.0"
failure = "0.1"

mutagen-core = { path = "../mutagen-core" }

quote = "0.6"
proc-macro2 = "0.4"
syn = "0.15"

[lib]
proc_macro = true
doctest = false
test = false
