[package]
name = "mutagen-plugin"
version = "0.1.2"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "Mutation testing for Rust – mutator plugin"
repository = "https://github.com/llogiq/mutagen"
license = "Apache-2.0/MIT"
categories = ["development-tools::testing"]
keywords = ["testing"]

[lib]
crate-type = [ "dylib" ]
plugin = true

[dependencies]
mutagen = {"version" = "0.1.1", "path" = ".."}
bitflags = "1.0"

[dev-dependencies]
compiletest_rs = "0.3.11"

[badges]
travis-ci = { repository = "llogiq/mutagen", branch = "master" }
