[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools::testing"]
description = "Mutation testing for Rust – mutator plugin"
edition = "2018"
keywords = ["testing"]
license = "Apache-2.0/MIT"
name = "mutagen-plugin"
repository = "https://github.com/llogiq/mutagen"
version = "0.1.2"

[badges]

[badges.travis-ci]
branch = "master"
repository = "llogiq/mutagen"

[dependencies]
bitflags = "1.0.4"
lazy_static = "1.2.0"
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.mutagen]
path = ".."
version = "0.1.2"

[dependencies.syn]
features = ["extra-traits", "full", "fold", "parsing"]
version = "0.15.18"

[dev-dependencies]
compiletest_rs = "0.3.11"

[lib]
proc_macro = true
