[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools::testing"]
description = "Mutation testing for Rust – mutator plugin"
edition = "2018"
keywords = ["testing"]
license = "Apache-2.0/MIT"
name = "mutagen-plugin"
repository = "https://github.com/llogiq/mutagen"
version = "0.1.2"

[badges]

[badges.travis-ci]
branch = "master"
repository = "llogiq/mutagen"

[dependencies]
bitflags = "1.0"
lazy_static = "1.2"
proc-macro2 = { version = "0.4", features = ["proc-macro", "nightly"] }
quote = "0.6"

[dependencies.mutagen]
path = ".."
version = "0.1"

[dependencies.syn]
features = ["extra-traits", "full", "fold", "parsing", "proc-macro"]
version = "0.15"

[dev-dependencies]
compiletest_rs = "0.3"

[lib]
proc_macro = true
