[package]
name = "cargo-mutagen"
version = "0.1.1"
authors = ["Hmvp <github@hmvp.nl>", "Andre Bogus <bogusandre@gmail.com>"]
description = "Mutation testing for Rust – Runner"
repository = "https://github.com/llogiq/mutagen"
license = "Apache-2.0/MIT"
categories = ["development-tools::testing", "development-tools::cargo-plugins"]
keywords = ["testing"]

[dependencies]
json = "0.11.12"
failure = "0.1.1"
colored = "1.6"

[badges]
travis-ci = { repository = "llogiq/mutagen", branch = "master" }
